2003-02-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/axis.m: Avoid whitespace in literal matrix problem.

2003-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/logm.m: New file.

2003-02-18  David Bateman <dbateman@free.fr>

 	* mkpkgadd: Scan C++ files as well

2003-02-13  Schloegl Alois <alois.schloegl@tugraz.at>

	* strings/findstr.m: Return empty set for zero-length target.

2003-02-11  Paul Kienzle <pkienzle@users.sf.net>

	* set/union.m: Preserve the orientation of inputs.

2003-01-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/int2str.m: Eliminate leading spaces.

2003-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/int2str.m: Do a better job with 0, Inf, and NaN, 

2003-01-11  Paul Kienzle <pkienzle@users.sf.net>

	* Makefile.in (gethelp$(BUILD_EXEEXT)): Pass $(BUILD_CXXFLAGS) and
	$(BUILD_LDFLAGS) to compiler.

2003-01-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/num2str.m: Don't specify field width for scalars.

2003-01-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (DISTFILES): Don't forget mkpkgadd.

2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* gethelp.cc: Define __USE_STD_IOSTREAM if using Compaq C++.

	* miscellaneous/tempname.m: New file.

	* miscellaneous/tempdir.m: New file.

	* miscellaneous/fullfile.m: New file.

2003-01-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/fileparts.m: New file.

	* io/beep.m: New file.

	* plot/__pltopt1__.m: Call undo_string_escapes for title part of
	format only.

2003-01-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/strcmp.m: Handle cell arrays of strings.

2002-12-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/int2str.m: Handle matrices.
	* general/num2str.m: Likewise.
	Also handle optional precision, and format args.

2002-12-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* audio/Makefile.in, control/base/Makefile.in,
	control/hinf/Makefile.in, control/obsolete/Makefile.in,